CU-3ehtwwf Change user fields on register flow
